--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -276,6 +276,13 @@ line-height: 1.5;
   right:0px;
 }
 
+.videoWrapper  .micro_recorder{
+  width: 25px;
+  height: 40px;
+  float: right;
+  margin-right: -25px;
+}
+
 #videoboxes .name {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
