--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -552,7 +552,7 @@ line-height: 1.5;
   line-height: 1.4;
 }
 
-#help{
+#help, #nameArea{
   position: absolute;
   display: none;
   top: 0px;
@@ -619,4 +619,49 @@ line-height: 1.5;
   padding: 3px;
   color: #444;
   font-weight: bold;
+}
+
+#buttonFullscreen{
+  cursor: pointer;
+  position: absolute;
+  width: 70px;
+  height: 30px;
+  
+  margin-left:-35px;
+  left:50%;
+  top: 0px;
+
+  background: #66666B;
+  color:  #e0dfeb;
+  border-bottom-left-radius: 70px;
+  border-bottom-right-radius: 70px;
+  box-shadow: 0px 0px 15px #444;
+  -webkit-box-shadow: 0px 0px 15px #444;
+  background-image: url(../img/fullscreen_start.png);
+  background-repeat: no-repeat;
+}
+
+#nameArea > div{
+  height:300px;
+  width:500px;
+  margin: 0 auto;
+  margin-top: 5%;
+  border-radius: 5px;
+  background: rgba(255,255,255,0.85);
+  text-align: center;
+}
+
+#nameArea input{
+  width:350px;
+  height:50px;
+  font-size:20px;
+  margin:50px 75px 50px 75px;
+}
+
+#nameArea #startButtonImage{
+  margin:0px 75px 50px 75px;
+  width:350px;
+  background-image: url('../img/startbutton_disabled.png');
+  background-repeat: no-repeat;
+  display:inline-block;
 }
