--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -354,6 +354,10 @@ line-height: 1.5;
   border: 2px solid #a6afb6;
 }
 
+#speechButton{
+  width: 150px;
+}
+
 /*------------Options under lokal Video--------------*/
 
 #video_options {
