--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -251,14 +251,13 @@ line-height: 1.5;
 
 #videoboxes {
   display: inline-block;
-  margin: 40px auto 0px auto;
+  margin: 0px auto 0px auto;
 }
 
 #videoboxes .user {
-  width: 600px;
-  height: 527px;
   float: left;
   margin: 10px;
+  margin-top: 60px;
 }
 
 .videoWrapper {
@@ -379,7 +378,6 @@ line-height: 1.5;
   float: left;
   padding-top: 5px;
   background: #66666b;
-  border: 5px solid #66666b;
   color: white;
   font-weight: bold;
 }
