--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -464,25 +464,31 @@ line-height: 1.5;
 #videoEffects {
   position: absolute;
   display: none;
-  top: 77px;
+  top: 86px;
   width: 600px;
   height: 450px;
-  background: #e0dfeb;
+  background: rgba(255,255,255,0.75);
 }
 
 #videoEffects div{
   cursor: pointer;
-  width: 33%;
+  width: 33.3%;
   height: 50%;
   float: left;
-  border: 1px solid #444;
+  box-shadow: inset 0px 0px 2px #444;
 }
 
 #videoEffects div:hover{
-  opacity: 0.8;  
+  box-shadow: innset 0px 0px 2px #000;
 }
 
 #glasses{
+  background-image: url(../img/effects/glasses.png);
+  background-size: 100% 100%;
+}
+
+#glasses:hover{
+  background: #fff;
   background-image: url(../img/effects/glasses.png);
   background-size: 100% 100%;
 }
@@ -492,10 +498,27 @@ line-height: 1.5;
   background-size: 100% 100%;
 }
 
+#hair:hover{
+  background: #fff;
+  background-image: url(../img/effects/hair.png);
+  background-size: 100% 100%;
+}
+
 #beard{
   background-image: url(../img/effects/beard.png);
   background-size: 100% 100%;
 }
+
+#beard:hover{
+  background: #fff;
+  background-image: url(../img/effects/beard.png);
+  background-size: 100% 100%;
+}
+
+#effect_off:hover{
+  background: #fff;
+}
+
 
 #faceDetectorOutput {
   width: 100%;
