--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -489,8 +489,8 @@ line-height: 1.5;
   background-size: 100% 100%;
 }
 
-#hair{
-  background-image: url(../img/effects/hair.png);
+#hat{
+  background-image: url(../img/effects/hat.png);
   background-size: 100% 100%;
 }
 
