--- a/assets/templates/error_template.html
+++ b/assets/templates/error_template.html
@@ -1,9 +1,11 @@
-      <div id="hangupInfo">
-      <div>
-      <h2>Es gab einen internen Fehler und unser Entwickler kümmeren sich bereits darum!</h2>
-      <br><h2>Bitte probier es doch später erneut!</h2>
-      <p>
-      <br>Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
-      <p>
-      </div>
-      </div>
+<div id="hangupInfo">
+  <div>
+    <h2>Es gab einen internen Fehler und unser Entwickler kümmeren sich bereits darum!</h2>
+    <br>
+    <h2>Bitte probier es doch später erneut!</h2>
+    <p>
+      <br>
+      Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
+    <p>
+  </div>
+</div>
