--- a/assets/templates/index_template.html
+++ b/assets/templates/index_template.html
@@ -1,12 +1,13 @@
-      <header>
-      {{#linkTo "about" id="infoButton"}}{{/linkTo}}
-      </header>
+<header>
+  {{#linkTo "about" id="infoButton"}}{{/linkTo}}
+</header>
 
-      <div id="startInfo">
-      <h1>Videochat mit Deinen Freunden!</h1><br>
-      <p>
-      Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.
-      </p>
-      <input placeholder="Bitte wählen Sie einen Namen..." id="name"/>
-      </div>
-      <div id="startButtonImage"></div>
+<div id="startInfo">
+  <h1>Videochat mit Deinen Freunden!</h1>
+  <br>
+  <p>
+    Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.
+  </p>
+  <input placeholder="Bitte wählen Sie einen Namen..." id="name"/>
+</div>
+<div id="startButtonImage"></div>
