--- a/assets/templates/room-hangup_template.html
+++ b/assets/templates/room-hangup_template.html
@@ -1,9 +1,10 @@
-      <div id="hangupInfo">
-      <div>
-      <h2>Danke das du Phovec benutzt hast!</h2>
-      <h2>Du darfst gerne jederzeit wieder kommen!</h2>
-      <p>
-      <br>Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
-      <p>
-      </div>
-      </div>
+<div id="hangupInfo">
+  <div>
+    <h2>Danke das du Phovec benutzt hast!</h2>
+    <h2>Du darfst gerne jederzeit wieder kommen!</h2>
+    <p>
+      <br>
+      Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
+    <p>
+  </div>
+</div>
