--- a/assets/templates/rooms_template.html
+++ b/assets/templates/rooms_template.html
@@ -1,6 +1,8 @@
-      <div id="roomsInfo">
-        <p>
-          Bitte warten...<br><br>
-          <img src="assets/img/process_bar.gif">
-        </p>
-      </div>
+<div id="roomsInfo">
+  <p>
+    Bitte warten...
+    <br>
+    <br>
+    <img src="assets/img/process_bar.gif">
+  </p>
+</div>
