--- a/assets/templates/room-unknown_template.html
+++ b/assets/templates/room-unknown_template.html
@@ -1,9 +1,11 @@
-      <div id="hangupInfo">
-      <div>
-      <h2>Dieser Raum ist uns nicht bekannt!</h2><br>
-      <h2>Eröffne doch Deinen eigenen Raum!</h2>
-      <p>
-      <br>Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
-      <p>
-      </div>
-      </div>
+<div id="hangupInfo">
+  <div>
+    <h2>Dieser Raum ist uns nicht bekannt!</h2>
+    <br>
+    <h2>Eröffne doch Deinen eigenen Raum!</h2>
+    <p>
+      <br>
+      Du wirst in <span class="countdown">5</span> Sekunden zur Startseite geleitet.
+    <p>
+  </div>
+</div>
