--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -13,7 +13,18 @@
     Du bist bei keinem dieser Netzwerke? KEIN PROBLEM, schicke einfach eine gute alte <strong>eMail</strong> ;)
   </p>
 </div>
-<div class="sidebar_content" id="qrcode_box"></div>
+<div class="sidebar_content" id="qrcode_box">
+  <div id="userInfo">
+    <h1>INFO</h1>
+    <br />
+    <p>
+      Damit deine Freunde mit dir Chatten können müssen sie nur die selbe URL in die Browseradresszeile eingeben. 
+      Damit du ihnen diese Adresse per SMS schicken kannst musst du nur mit der passenden App auf deinem Smartphone
+      diesen QR-Code abphotografieren und das Ergebnis per SMS verschicken.
+    </p>
+    <br />
+  </div>
+</div>
 <div class="sidebar_content" id="friends_of_facebook"></div>
 <div class="sidebar_content" id="friends_of_google"></div>
 <div class="sidebar_content" id="friends_of_email">
