--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -151,7 +151,26 @@
 }
 
 .sidebar_content{
-  margin-top: 50px;
+  overflow-y: scroll;
+  margin-top: 35px;
+}
+
+.sidebar_content ul{
+  margin: 0px;
+}
+.sidebar_content li{
+  text-align: left;
+  list-style: none;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: -6px;
+  font-size: 13px;
+}
+
+.sidebar_content li:hover{
+  cursor: pointer;
+  color: #fff;
+  background: #444444;
 }
 
 #userInfo{
