sending text messages works again

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -335,7 +335,7 @@ line-height: 1.5;
   width: 100%;
 }
 
-.chatInput{
+.user .input{
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -347,7 +347,7 @@ line-height: 1.5;
   overflow-y: scroll;
 }
 
-.chatOutput{
+.user .output{
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
