--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -292,7 +292,7 @@ line-height: 1.5;
   box-sizing: border-box;
 }
 
-.videoWrapper img {
+.bgAvatar {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -329,6 +329,11 @@ line-height: 1.5;
   float: right;
   margin-top: -40px;
   margin-right: 25px;
+}
+
+.chatFaces{
+  width:20px;
+  height:20px;
 }
 
 #videoboxes .name {
