datachannel gets created when user enters the room

--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -20,7 +20,7 @@
     <p>
       Damit deine Freunde mit dir Chatten können müssen sie nur die selbe URL in die Browseradresszeile eingeben. 
       Damit du ihnen diese Adresse per SMS schicken kannst musst du nur mit der passenden App auf deinem Smartphone
-      diesen QR-Code abphotografieren und das Ergebnis per SMS verschicken.
+      diesen QR-Code scannen und das Ergebnis per SMS verschicken.
     </p>
     <br />
   </div>
