--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -74,26 +74,24 @@
   -webkit-box-shadow: 0px 0px 15px #444;
 }
 
-.sidebar_open{
+.sidebar_open {
   background: #66666B;
   background-image: url('../img/sidebar-opened-arrow.png');
   background-repeat: no-repeat;
   background-size: 70% 70%;
   background-position: 20% 50%;
   left: 150px;
-  
   border-top-right-radius: 70px;
   border-bottom-right-radius: 70px;
 }
 
-.sidebar_close{
+.sidebar_close {
   background: #66666B;
   background-image: url('../img/sidebar-closed-arrow.png');
   background-repeat: no-repeat;
   background-size: 70% 70%;
   background-position: 80% 50%;
   left: 115px;
-  
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px;
 }
@@ -106,7 +104,6 @@
   top: 45%;
   z-index: 85;
   overflow: hidden;
-
   border: 0px;
 }
 
@@ -115,7 +112,7 @@
   overflow: hidden;
 }
 
-#glow{
+#glow {
   position: absolute;
   width: 35px;
   height: 70px;
@@ -150,15 +147,15 @@
   opacity: 0.8;
 }
 
-.sidebar_content{
+.sidebar_content {
   overflow-y: scroll;
   margin-top: 30px;
 }
 
-.sidebar_content ul{
+.sidebar_content ul {
   margin: 0px;
 }
-.sidebar_content li{
+.sidebar_content li {
   text-align: left;
   list-style: none;
   margin-left: 15px;
@@ -167,18 +164,18 @@
   font-size: 13px;
 }
 
-.sidebar_content li:hover{
+.sidebar_content li:hover {
   cursor: pointer;
   color: #fff;
   background: #444444;
 }
 
-#userInfo{
-display: inline-block;
-margin: 5px;
-padding: 25px;
-color: #888;
-line-height: 1.5;
+#userInfo {
+  display: inline-block;
+  margin: 5px;
+  padding: 25px;
+  color: #888;
+  line-height: 1.5;
 }
 #userInfo p {
   font-size: 16px;
@@ -205,18 +202,18 @@ line-height: 1.5;
   background: #A0CAE2;
 }
 
-.email_input{
+.email_input {
   margin-left: 10%;
   margin-bottom: 5px;
   width: 80%;
   border: 2px solid #66666B;
 }
 
-#mailDescription{
+#mailDescription {
   height: 100px;
 }
 
-#mailFormButton{
+#mailFormButton {
   margin-left: 10%;
   margin-bottom: 5px;
   width: 80%;
@@ -249,7 +246,7 @@ line-height: 1.5;
   background-repeat: no-repeat;
 }
 
-#qr_tab{
+#qr_tab {
   display: block;
   background: #66666b;
   background-image: url('../img/sidebar/qrcode.png');
@@ -258,12 +255,12 @@ line-height: 1.5;
   background-repeat: no-repeat;
 }
 
-.tab_active{
+.tab_active {
   border-bottom: 4px solid #fff;
   box-shadow: inset 0px 1px 1px #999;
 }
 
-.tab_inactive{
+.tab_inactive {
   border-bottom: 4px solid #444444;
   box-shadow: inset 1px 0px 1px #888;
 }
@@ -305,25 +302,25 @@ line-height: 1.5;
   opacity: 1;
 }
 
-.videoWrapper .stateMute{
-  width:64px;
-  height:64px;
-  background:url(../img/speaker_mute.png);
+.videoWrapper .stateMute {
+  width: 64px;
+  height: 64px;
+  background: url(../img/speaker_mute.png);
   position: absolute;
   z-index: 2;
-  display:none;
+  display: none;
 }
 
-.videoWrapper .removeParticipant{
-  width:64px;
-  height:64px;
-  background:url(../img/hangup.png);
+.videoWrapper .removeParticipant {
+  width: 64px;
+  height: 64px;
+  background: url(../img/hangup.png);
   position: absolute;
   z-index: 2;
-  right:0px;
+  right: 0px;
 }
 
-.videoWrapper  .micro_recorder{
+.videoWrapper  .micro_recorder {
   width: 25px;
   height: 40px;
   float: right;
@@ -331,9 +328,9 @@ line-height: 1.5;
   margin-right: 25px;
 }
 
-.chatFaces{
-  width:20px;
-  height:20px;
+.chatFaces {
+  width: 20px;
+  height: 20px;
 }
 
 #videoboxes .name {
@@ -359,37 +356,36 @@ line-height: 1.5;
   width: 100%;
 }
 
-.user .input{
+.user .input {
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  height:42px;
+  height: 42px;
   border: 2px solid #a6afb6;
   padding-right: 60px;
   overflow-y: scroll;
 }
 
-.user .output{
+.user .output {
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  height:50px;
+  height: 50px;
   border: 2px solid #a6afb6;
   overflow-y: scroll;
 }
 
-#speechButton{
+#speechButton {
   cursor: pointer;
   position: absolute;
   width: 50px;
   height: 50px;
   left: 50px;
-  
-  color:  #e0dfeb;
+  color: #e0dfeb;
   background-image: url(../img/micro_recorder_off.png);
   background-repeat: no-repeat;
   background-size: 45%;
@@ -482,7 +478,7 @@ line-height: 1.5;
   background: rgba(255,255,255,0.75);
 }
 
-#videoEffects div{
+#videoEffects div {
   cursor: pointer;
   width: 33.3%;
   height: 50%;
@@ -490,47 +486,46 @@ line-height: 1.5;
   box-shadow: inset 0px 0px 2px #444;
 }
 
-#videoEffects div:hover{
+#videoEffects div:hover {
   box-shadow: innset 0px 0px 2px #000;
 }
 
-#glasses{
+#glasses {
   background-image: url(../img/effects/glasses.png);
   background-size: 100% 100%;
 }
 
-#glasses:hover{
+#glasses:hover {
   background: #fff;
   background-image: url(../img/effects/glasses.png);
   background-size: 100% 100%;
 }
 
-#hat{
+#hat {
   background-image: url(../img/effects/hat.png);
   background-size: 100% 100%;
 }
 
-#hat:hover{
+#hat:hover {
   background: #fff;
   background-image: url(../img/effects/hat.png);
   background-size: 100% 100%;
 }
 
-#beard{
+#beard {
   background-image: url(../img/effects/beard.png);
   background-size: 100% 100%;
 }
 
-#beard:hover{
+#beard:hover {
   background: #fff;
   background-image: url(../img/effects/beard.png);
   background-size: 100% 100%;
 }
 
-#effect_off:hover{
+#effect_off:hover {
   background: #fff;
 }
-
 
 #faceDetectorOutput {
   width: 100%;
@@ -547,17 +542,17 @@ line-height: 1.5;
   text-align: center;
 }
 
-#qrcode_box{
+#qrcode_box {
   display: none;
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
 }
 
-#mail_form{
-  display:none;
+#mail_form {
+  display: none;
 }
 
-.recordLocalVideo{
+.recordLocalVideo {
   width: 32px;
   height: 32px;
   position: absolute;
@@ -566,10 +561,10 @@ line-height: 1.5;
   background-repeat: no-repeat;
   top: 60px;
   left: 10px;
-  display:none;
+  display: none;
 }
 
-.recordRemoteVideo{
+.recordRemoteVideo {
   width: 32px;
   height: 32px;
   position: absolute;
@@ -578,10 +573,10 @@ line-height: 1.5;
   background-repeat: no-repeat;
   top: 60px;
   left: 10px;
-  display:none;
+  display: none;
 }
 
-.recordLocalAudio{
+.recordLocalAudio {
   width: 32px;
   height: 32px;
   position: absolute;
@@ -590,10 +585,10 @@ line-height: 1.5;
   background-repeat: no-repeat;
   top: 90px;
   left: 10px;
-  display:none;
+  display: none;
 }
 
-.recordRemoteAudio{
+.recordRemoteAudio {
   width: 32px;
   height: 32px;
   position: absolute;
@@ -602,15 +597,15 @@ line-height: 1.5;
   background-repeat: no-repeat;
   top: 90px;
   left: 10px;
-  display:none;
+  display: none;
 }
 
-.countryLocation{
-  width:32px;
-  height:32px;
+.countryLocation {
+  width: 32px;
+  height: 32px;
 }
 
-.disabled{
+.disabled {
   z-index: -1;
 }
 
@@ -624,7 +619,7 @@ line-height: 1.5;
   line-height: 1.4;
 }
 
-#help, #nameArea{
+#help, #nameArea {
   position: absolute;
   display: none;
   top: 0px;
@@ -635,7 +630,7 @@ line-height: 1.5;
   z-index: 100;
 }
 
-#help_window{
+#help_window {
   margin: 0 auto;
   margin-top: 5%;
   border-radius: 5px;
@@ -647,42 +642,40 @@ line-height: 1.5;
   overflow-y: scroll;
 }
 
-#help_window img{
+#help_window img {
   width: 85%;
   display: block;
   margin: auto;
 }
 
-#help_content{
+#help_content {
   padding: 50px;
 }
 
-#show_help{
+#show_help {
   cursor: pointer;
   position: absolute;
   width: 70px;
   height: 30px;
-  
-  -webkit-transform:rotate(-90deg);
-  -moz-transform:rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
   padding-top: 10px;
   font-weight: bold;
   left: -20px;
   top: 50%;
-
   background: #66666B;
-  color:  #e0dfeb;
+  color: #e0dfeb;
   border-bottom-left-radius: 70px;
   border-bottom-right-radius: 70px;
   box-shadow: 0px 0px 15px #444;
   -webkit-box-shadow: 0px 0px 15px #444;
 }
 
-#show_help:hover{
+#show_help:hover {
   opacity: 0.8;
 }
 
-#close_help{
+#close_help {
   cursor: pointer;
   position: fixed;
   width: 20px;
@@ -693,43 +686,42 @@ line-height: 1.5;
   font-weight: bold;
 }
 /*
-#buttonFullscreen{
-  cursor: pointer;
-  position: absolute;
-  width: 70px;
-  height: 30px;
-  
-  margin-left:-35px;
-  left:50%;
-  top: 0px;
+ #buttonFullscreen{
+ cursor: pointer;
+ position: absolute;
+ width: 70px;
+ height: 30px;
 
-  background: #66666B;
-  color:  #e0dfeb;
-  border-bottom-left-radius: 70px;
-  border-bottom-right-radius: 70px;
-  box-shadow: 0px 0px 15px #444;
-  -webkit-box-shadow: 0px 0px 15px #444;
-  background-image: url(../img/fullscreen_start.png);
-  background-repeat: no-repeat;
-}
-*/
+ margin-left:-35px;
+ left:50%;
+ top: 0px;
 
-#buttonFullscreen{
+ background: #66666B;
+ color:  #e0dfeb;
+ border-bottom-left-radius: 70px;
+ border-bottom-right-radius: 70px;
+ box-shadow: 0px 0px 15px #444;
+ -webkit-box-shadow: 0px 0px 15px #444;
+ background-image: url(../img/fullscreen_start.png);
+ background-repeat: no-repeat;
+ }
+ */
+
+#buttonFullscreen {
   cursor: pointer;
   position: absolute;
   width: 50px;
   height: 50px;
   left: 0px;
-  
-  color:  #e0dfeb;
+  color: #e0dfeb;
   background-image: url(../img/fullscreen_start.png);
   background-repeat: no-repeat;
   background-position: -10px 15px;
 }
 
-#nameArea > div{
-  height:300px;
-  width:500px;
+#nameArea > div {
+  height: 300px;
+  width: 500px;
   margin: 0 auto;
   margin-top: 5%;
   border-radius: 5px;
@@ -737,17 +729,76 @@ line-height: 1.5;
   text-align: center;
 }
 
-#nameArea input{
-  width:350px;
-  height:50px;
-  font-size:20px;
-  margin:50px 75px 50px 75px;
+#nameArea input {
+  width: 350px;
+  height: 50px;
+  font-size: 20px;
+  margin: 50px 75px 50px 75px;
 }
 
-#nameArea #startButtonImage{
-  margin:0px 75px 50px 75px;
-  width:350px;
+#nameArea #startButtonImage {
+  margin: 0px 75px 50px 75px;
+  width: 350px;
   background-image: url('../img/startbutton_disabled.png');
   background-repeat: no-repeat;
-  display:inline-block;
+  display: inline-block;
+}
+
+.file-transfer-progress {
+  display:none;
+  position: fixed;
+  z-index: 1;
+  bottom:0px;
+  width: 100%;
+  height: 100px;
+  font-size: 60px;
+  color: white;
+  line-height: 100%;
+  vertical-align: middle;
+}
+
+.file-transfer-progress .overlay {
+  position: absolute;
+  right: 0px;
+  z-index: 2;
+  background: #FFF;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
+
+.file-transfer-progress .background {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.file-transfer-progress .info {
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+}
+
+.file-transfer-progress .info .state{
+  width: 100%;
+  height: 100%;
+  line-height:100px;
+  vertical-align: middle;
+  text-align: center;
+  position: absolute;
+  z-index:1;
+}
+
+.file-transfer-progress .info .buttons {
+  position: absolute;
+  z-index:2;
+  right: 24.5px;
+  top:25.25px;
+}
+
+.file-transfer-progress .info .buttons img{
+  width:49px;
+  height:49px;
 }
