--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -745,16 +745,28 @@
 }
 
 .file-transfer-progress {
-  display:none;
+  display: none;
   position: fixed;
   z-index: 1;
-  bottom:0px;
+  bottom: 0px;
   width: 100%;
-  height: 100px;
+  height: 130px;
   font-size: 60px;
   color: white;
   line-height: 100%;
   vertical-align: middle;
+  background: white;
+  padding: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.file-transfer-wrapper {
+  position: relative;
+  z-index: 1;
+  height: 90px;
+  width: 100%;
 }
 
 .file-transfer-progress .overlay {
@@ -765,6 +777,7 @@
   opacity: 0.7;
   width: 100%;
   height: 100%;
+  right: 0px;
 }
 
 .file-transfer-progress .background {
@@ -774,31 +787,56 @@
   height: 100%;
 }
 
-.file-transfer-progress .info {
+.file-transfer-progress .background > img {
+  width: 100%;
+  height: 100%;
+}
+
+.file-transfer-progress .overview {
   position: absolute;
   z-index: 3;
   width: 100%;
   height: 100%;
 }
 
-.file-transfer-progress .info .state{
+.file-transfer-progress .overview .state {
   width: 100%;
   height: 100%;
-  line-height:100px;
+  line-height: 90px;
   vertical-align: middle;
   text-align: center;
   position: absolute;
-  z-index:1;
+  z-index: 1;
 }
 
-.file-transfer-progress .info .buttons {
+.file-transfer-progress .overview .buttons {
   position: absolute;
-  z-index:2;
-  right: 24.5px;
-  top:25.25px;
+  z-index: 2;
+  height: 40px;
+  right: 20px;
+  top: 20px;
 }
 
-.file-transfer-progress .info .buttons img{
-  width:49px;
-  height:49px;
+.file-transfer-progress .overview .buttons img {
+  width: 40px;
+  height: 40px;
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  float: left;
+  margin: 2.5px;
+  cursor: pointer;
+}
+
+.file-transfer-progress .info {
+  font-size: 13px;
+  color: #000;
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  z-index: 1;
+  line-height: 30px;
+  vertical-align: middle;
+  bottom:2px;
+  left:10px;
 }
