--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -392,11 +392,9 @@
   background-position: 15px 13px;
 }
 
-#alterNameForm{
-  box-sizing: border-box;
-  float: left;
+#videoboxes form#alterNameForm{
   width: 120px;
-  margin-left: 23%;
+  margin-left: 35%;
 }
 
 /*------------Options under lokal Video--------------*/
