--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -4,34 +4,44 @@
 <a class="socialButtons tab_inactive" id="qr_tab" {{ action "QrCodeTab" target="view" }}></a>
 {{/view}}
 <!-- user-login data -->
-<div id="userInfo">
-  <br />
-  <h1>INFO</h1>
-  <br />
-  <p>
-    Melde dich mit <strong>Facebook</strong> oder <strong>Google+</strong> an und schicke deinen Freunden direkt eine Chateinladung.
-    Du bist bei keinem dieser Netzwerke? KEIN PROBLEM, schicke einfach eine gute alte <strong>eMail</strong> ;)
-  </p>
-</div>
-<div class="sidebar_content" id="qrcode_box">
+<div class="sidebar_content">
   <div id="userInfo">
     <h1>INFO</h1>
     <br />
-    <p>
+    <p class="sidebar_text">
+      Melde dich mit <strong>Facebook</strong> oder <strong>Google+</strong> an und schicke deinen Freunden direkt eine Chateinladung.
+      Du bist bei keinem dieser Netzwerke? KEIN PROBLEM, schicke einfach eine gute alte <strong>eMail</strong> ;)
+    </p>
+  </div>
+  <div id="qrcode_box">
+    <h1>INFO</h1>
+    <br />
+    <p class="sidebar_text">
       Damit deine Freunde mit dir Chatten können müssen sie nur die selbe URL in die Browseradresszeile eingeben. 
       Damit du ihnen diese Adresse per SMS schicken kannst musst du nur mit der passenden App auf deinem Smartphone
       diesen QR-Code scannen und das Ergebnis per SMS verschicken.
     </p>
     <br />
   </div>
-</div>
-<div class="sidebar_content" id="friends_of_facebook"></div>
-<div class="sidebar_content" id="friends_of_google"></div>
-<div class="sidebar_content" id="friends_of_email">
-  <form id="mail_form">
-    <br>
-    <input type="text" class="email_input" id="mailAddress" placeholder="E-Mail Addresse"/>
-    <textarea type="text" class="email_input" id="mailDescription" placeholder="E-Mail Beschreibung"></textarea>
-    <input type="button" id="mailFormButton" value="Sende E-Mail" {{action "addMailInfo" target="App.Controller.auth"}} />
-  </form>
+  <div id="friends_of_facebook">
+    <h1>INFO</h1>
+    <br />
+    <p class="sidebar_text">
+      Damit wir deine Freunde von Facebook auflisten können, müssen sie sich in dem sich öffnenden neuem Fenster bei Facebook anmelden.
+    </p>
+  </div>
+  <div id="friends_of_google">
+    <h1>INFO</h1>
+    <br />
+    <p class="sidebar_text">
+      Damit wir deine Kontakte von Gmail auflisten können, müssen sie sich in dem sich öffnenden neuem Fenster bei Facebook anmelden.
+    </p>
+  </div>
+  <div id="friends_of_email">
+    <form id="mail_form">
+      <input type="text" class="email_input" id="mailAddress" placeholder="E-Mail Addresse"/>
+      <textarea type="text" class="email_input" id="mailDescription" placeholder="E-Mail Beschreibung"></textarea>
+      <input type="button" id="mailFormButton" value="Sende E-Mail" {{action "addMailInfo" target="App.Controller.auth"}} />
+    </form>
+  </div>
 </div>
