added green confirm box for send email or fb-email and recolored the tab active indicator

--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -5,6 +5,7 @@
 {{/view}}
 <!-- user-login data -->
 <div class="sidebar_content">
+  <div class="confirm_send">Erfolgreich versendet</div>
   <div id="userInfo">
     <h1>INFO</h1>
     <br />
