--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -220,6 +220,27 @@
   margin-left: 10%;
   margin-bottom: 5px;
   width: 80%;
+  border: 2px solid #66666B;
+  height: 30px;
+  color: #e0dfeb;
+  background: #66666b;
+}
+
+#mailFormButton:hover{
+  background: #99999b;
+  color: #fff;
+}
+
+.confirm_send{
+  display: none;
+  width: 80%;
+  height: 30px;
+  background: rgb(143, 224, 122);
+  color: #000000;
+  border-radius: 15px;
+  margin-left: 10%;
+  margin-bottom: 20px;
+  padding-top: 10px;
 }
 
 #facebook_tab {
@@ -259,7 +280,7 @@
 }
 
 .tab_active {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid #bbb;
   box-shadow: inset 0px 1px 1px #999;
 }
 
