--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -150,7 +150,7 @@
 .sidebar_content {
   box-sizing:border-box;
   -moz-box-sizing:border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: inline-block;
   color: #888;
   line-height: 1.4;
@@ -630,6 +630,8 @@
 }
 
 .disabled {
+  background: #888;
+  color: #bbb;
   z-index: -1;
 }
 
