--- a/assets/templates/index_template.html
+++ b/assets/templates/index_template.html
@@ -10,4 +10,4 @@
   </p>
   <input placeholder="Bitte wählen Sie einen Namen..." id="name"/>
 </div>
-<div id="startButtonImage"></div>
+<div id="startButtonImage" title="Wird erst aktive wenn ein Name eingegeben wurde"></div>
