changed user number position

--- a/assets/templates/_localUser_template.html
+++ b/assets/templates/_localUser_template.html
@@ -1,5 +1,7 @@
 {{#view App.UserView}} 
-<span class="name" id="local_name">Phovec-Benutzer</span>
+<div class='userHead' id="locaHead">
+  <div class="userName">Phovec-Benutzer</div>
+</div>
 <div class="videoWrapper">
   <div class="stateMute"></div>
   <img class='bgAvatar' src="assets/img/avatar.jpg"/>
