fullscreen avatar bug-fix

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -314,17 +314,19 @@
   box-sizing: border-box;
 }
 
-.bgAvatar {
+.defaultAvatar {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
 }
 
 .videoWrapper video {
   width: 100%;
   height: 100%;
   opacity: 1;
+  position: absolute;
+  z-index: 1;
 }
 
 .videoWrapper .stateMute {
