--- a/assets/templates/room_template.html
+++ b/assets/templates/room_template.html
@@ -29,7 +29,7 @@
 </div>
 
 <div id="show_help" {{action "openHelp" target="view"}}>
-  help
+  Hilfe
 </div>
 <div id="help">
   <div id="help_window">
