--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -525,6 +525,7 @@
   width: 600px;
   height: 450px;
   background: rgba(255,255,255,0.75);
+  z-index: 50;
 }
 
 #videoEffects div {
@@ -570,6 +571,13 @@
   background: #fff;
   background-image: url(../img/effects/beard.png);
   background-size: 100% 100%;
+}
+
+#effect_off {
+  background-image: url(../img/effects/no_effects.png);
+  background-size: 90%;
+  background-position: 10px;
+  background-repeat: no-repeat;
 }
 
 #effect_off:hover {
