--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -148,8 +148,8 @@
 }
 
 .sidebar_content {
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
   overflow-y: auto;
   display: inline-block;
   color: #888;
@@ -292,26 +292,25 @@
 
 #videoboxes {
   display: inline-block;
-  margin: 0px auto 0px auto;
+  margin: 70px auto 0px auto;
 }
 
 #videoboxes .user {
   float: left;
   margin: 10px;
-  margin-top: 60px;
 }
 
 .videoWrapper {
+  float: left;
   text-align: left;
-  position: relative;
   width: 100%;
   height: 450px;
-  margin: 27px 0 0 0;
   padding: 0;
   border: 1px solid #888;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  position: relative;
 }
 
 .defaultAvatar {
@@ -350,12 +349,13 @@
   top: 4px;
 }
 
-.videoWrapper  .micro_recorder {
+.user .micro_recorder {
+  position: absolute;
+  right: 25px;
+  top: 48px;
+  z-index: 10;
   width: 25px;
   height: 40px;
-  float: right;
-  margin-top: -40px;
-  margin-right: 25px;
 }
 
 .chatFaces {
@@ -380,7 +380,7 @@
 }
 
 #videoboxes .userHead .userNumber {
-  display:none;
+  display: none;
   position: absolute;
   top: 5px;
   right: 3px;
@@ -394,12 +394,14 @@
   line-height: 19px;
 }
 
-#videoboxes form, textarea, input {
+#videoboxes form {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
   width: 100%;
+  position: relative;
+  text-align: left;
 }
 
 .user .input {
@@ -410,8 +412,9 @@
   width: 100%;
   height: 42px;
   border: 2px solid #a6afb6;
-  padding-right: 60px;
+  padding-right: 50px;
   overflow-y: scroll;
+  margin-top: -2px;
 }
 
 .user .output {
@@ -422,7 +425,8 @@
   width: 100%;
   height: 50px;
   border: 2px solid #a6afb6;
-  overflow-y: scroll;
+  overflow-y: auto;
+  margin-top: -1px;
 }
 
 #speechButton {
@@ -447,9 +451,9 @@
 /*------------Options under lokal Video--------------*/
 
 #video_options {
+  display: inline-block;
   z-index: 50;
   width: 100%;
-  height: 25px;
   float: left;
 }
 
@@ -520,8 +524,8 @@
 
 #videoEffects {
   position: absolute;
+  z-index: 3;
   display: none;
-  top: 86px;
   width: 600px;
   height: 450px;
   background: rgba(255,255,255,0.75);
@@ -580,6 +584,8 @@
   width: 100%;
   float: left;
   display: none;
+  position: absolute;
+  z-index: 2;
 }
 
 #progressSnapshotbar {
@@ -769,17 +775,18 @@
 
 .file-transfer-progress {
   display: none;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
+  bottom:0px;
+  z-index: 5;
   bottom: 0px;
   width: 100%;
-  height: 130px;
-  font-size: 60px;
+  height: 50px;
+  font-size: 20px;
   color: white;
-  line-height: 100%;
+  line-height: 50px;
   vertical-align: middle;
   background: white;
-  padding: 5px;
+  padding: 3px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -788,8 +795,9 @@
 .file-transfer-wrapper {
   position: relative;
   z-index: 1;
-  height: 90px;
+  height: 30px;
   width: 100%;
+  overflow:hidden;
 }
 
 .file-transfer-progress .overlay {
@@ -800,14 +808,13 @@
   opacity: 0.7;
   width: 100%;
   height: 100%;
-  right: 0px;
 }
 
 .file-transfer-progress .background {
   position: absolute;
   z-index: 1;
   width: 100%;
-  height: 100%;
+  height: 40px;
 }
 
 .file-transfer-progress .background > img {
@@ -825,7 +832,7 @@
 .file-transfer-progress .overview .state {
   width: 100%;
   height: 100%;
-  line-height: 90px;
+  line-height: 30px;
   vertical-align: middle;
   text-align: center;
   position: absolute;
@@ -835,14 +842,14 @@
 .file-transfer-progress .overview .buttons {
   position: absolute;
   z-index: 2;
-  height: 40px;
-  right: 20px;
-  top: 20px;
+  height: 20px;
+  right: 5px;
+  top: 3px;
 }
 
 .file-transfer-progress .overview .buttons img {
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   margin: 0px;
   padding: 0px;
   border: none;
@@ -855,11 +862,12 @@
   font-size: 13px;
   color: #000;
   width: 100%;
-  height: 30px;
+  height: 14px;
   position: absolute;
   z-index: 1;
   line-height: 30px;
   vertical-align: middle;
   bottom: 2px;
-  left: 10px;
+  left: 3px;
+  
 }
