auth loeading friend-lists (google, facebook) imrpoved

--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -33,6 +33,8 @@
       Dadurch können wir dir deine Freunde auflisten, die du dann mit einem Klick einladen kannst. Dadurch wird ihnen eine Facebook-E-Mail oder 
       Chatnachricht geschickt, mit dem Link zu dieser Seite. Wenn deine Freunde den Link im Browser öffnen, können sie mit dir in diesem Chatraum chatten.
     </p>
+    <br/>
+    <img class="load_progress_bar_auth" src="assets/img/process_bar.gif">
   </div>
   <div id="friends_of_google">
     <h1>INFO</h1>
@@ -42,6 +44,8 @@
       Dadurch können wir dir deine Kontakte auflisten, die du dann mit einem Klick einladen kannst. Dadurch wird ihnen eine E-Mail geschickt mit
       dem Link zu dieser Seite. Wenn deine Freunde den Link im Browser öffnen, können sie mit dir in diesem Chatraum chatten.
     </p>
+    <br/>
+    <img class="load_progress_bar_auth" src="assets/img/process_bar.gif">
   </div>
   <div id="friends_of_email">
     <form id="mail_form" style="display: inline-block;">
