worked on datachannel, chat and file-transfer

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -404,6 +404,7 @@
 }
 
 .user .input {
+  font-size: 11px;
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -419,6 +420,7 @@
 }
 
 .user .output {
+  font-size: 11px;
   background-color: #ffffff;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -427,6 +429,7 @@
   height: 35px;
   border: 2px solid #a6afb6;
   overflow-y: auto;
+  overflow-x: hidden;
   margin-top: -1px;
 }
 
@@ -793,7 +796,7 @@
 .file-transfer-progress {
   display: none;
   position: absolute;
-  bottom:0px;
+  bottom: 0px;
   z-index: 5;
   bottom: 0px;
   width: 100%;
@@ -814,7 +817,7 @@
   z-index: 1;
   height: 30px;
   width: 100%;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .file-transfer-progress .overlay {
@@ -886,5 +889,35 @@
   vertical-align: middle;
   bottom: 2px;
   left: 3px;
-  
+}
+
+.fileDropped {
+  padding: 1px 1px 1px 3px;
+  height: 19px;
+  width: 100%;
+  float: left;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.fileDropped img {
+  float: left;
+  margin-top:1px;
+}
+
+.fileDropped .fileName {
+  float: left;
+  margin-left: 5px;
+  height: 19px;
+  line-height: 19px;
+  vertical-align: middle;
+}
+
+.fileDropped .fileStatus {
+  float: right;
+  line-height: 19px;
+  vertical-align: middle;
+  height: 19px;
+  margin-right: 5px;
 }
