add edit button

--- a/assets/templates/_localUser_template.html
+++ b/assets/templates/_localUser_template.html
@@ -1,6 +1,6 @@
 {{#view App.UserView}} 
 <div class='userHead' id="locaHead">
-  <div class="userName">Phovec-Benutzer</div>
+  <div><div class="userName">Phovec-Benutzer</div> <span {{action editName target="view" }} id="edit_name">edit</span></div>
 </div>
 <div class="videoWrapper">
   <div class="stateMute"></div>
