--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -10,6 +10,21 @@
   background: rgba(255,255,255,0);
 }
 
+.userName{
+  display: inline;  
+}
+
+#edit_name{
+  cursor: pointer;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  color: #888;
+  height: 5px;
+  font-size: 11px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 #arrow {
   float: left;
   width: 100px;
