--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -907,7 +907,7 @@
 }
 
 .file-transfer-progress .info {
-  font-size: 13px;
+  font-size: 8px;
   color: #000;
   width: 100%;
   height: 14px;
@@ -947,5 +947,11 @@
   line-height: 19px;
   vertical-align: middle;
   height: 19px;
-  margin-right: 5px;
+  margin-right: 3px;
+}
+
+.fileDropped .fileStatus input{
+  width: 50px;
+  height:18px;
+  font-size:8px;
 }
