--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -10,12 +10,12 @@
   background: rgba(255,255,255,0);
 }
 
-.userName{
+.userName {
   display: inline;
   vertical-align: middle;
 }
 
-#edit_name{
+#edit_name {
   cursor: pointer;
   border: 1px solid #aaa;
   border-radius: 5px;
@@ -228,7 +228,7 @@
   border: 2px solid #66666B;
 }
 
-.load_progress_bar_auth{
+.load_progress_bar_auth {
   display: none;
 }
 
@@ -310,7 +310,7 @@
 
 #videoboxes {
   display: inline-block;
-  margin: 0px auto 0px auto;
+  margin: 10px auto 0px auto;
 }
 
 #videoboxes .user {
@@ -923,13 +923,13 @@
 }
 
 .file-transfer-progress .info {
-  font-size: 8px;
+  font-size: 9px;
   color: #000;
   width: 100%;
   height: 14px;
   position: absolute;
   z-index: 1;
-  line-height: 30px;
+  line-height: 14px;
   vertical-align: middle;
   bottom: 2px;
   left: 3px;
@@ -947,7 +947,11 @@
 
 .fileDropped img {
   float: left;
-  margin-top:1px;
+  margin-top: 1px;
+}
+
+.fileDropped a {
+  text-decoration: underline;
 }
 
 .fileDropped .fileName {
@@ -966,8 +970,8 @@
   margin-right: 3px;
 }
 
-.fileDropped .fileStatus input{
+.fileDropped .fileStatus input {
   width: 50px;
-  height:18px;
-  font-size:8px;
+  height: 18px;
+  font-size: 8px;
 }
