--- a/assets/templates/_localUser_template.html
+++ b/assets/templates/_localUser_template.html
@@ -10,6 +10,7 @@
   <video autoplay muted></video>
   <audio autoplay loop muted></audio>
   <canvas id="faceDetectorOutput"></canvas>
+  <canvas id="audioVisualizer"></canvas>
   <div id="videoEffects">
     <div {{action putGlassesOnUser target="view" }} class="effectButton" id="glasses" ></div>
     <div {{action putHatOnUser target="view" }} class="effectButton" id="hat" ></div>
