--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -420,6 +420,27 @@
   width: 100%;
   position: relative;
   text-align: left;
+  display: none;
+}
+
+.user .connectionInfo {
+  font-size: 11px;
+  background-color: #c04e58;
+  color:white;
+  line-height:20px;
+  vertical-align:middle;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 25px;
+  border: 2px solid #a6afb6;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-top: -1px;
+  float: left;
+  position: relative;
+  text-align: center;
 }
 
 .user .input {
@@ -469,9 +490,9 @@
   width: 120px;
   height: 18px;
   position: absolute;
-  left:50%;
-  margin-left:-60px;
-  top:3px;
+  left: 50%;
+  margin-left: -60px;
+  top: 3px;
 }
 
 /*------------Options under lokal Video--------------*/
@@ -649,10 +670,10 @@
   z-index: 2;
 }
 
-#audioVisualizer{
-  height:250px;
-  bottom:0px;
-  left:0px;
+#audioVisualizer {
+  height: 250px;
+  bottom: 0px;
+  left: 0px;
 }
 
 #progressSnapshotbar {
@@ -686,7 +707,6 @@
   cursor: pointer;
   opacity: 1;
 }
-
 
 .recordLocalAudio, .recordRemoteAudio {
   width: 74px;
